--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mcrowder65/mooks": "^2.0.1",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
+    "history": "^4.10.1",
     "lodash.compose": "^2.4.1",
     "mooks": "^1.7.0",
     "node": "10.15.0",
@@ -19,10 +20,14 @@
     "styled-components": "^4.4.0"
   },
   "scripts": {
+    "jest": "CI=true react-scripts test --silent --coverage",
+    "jest:watch": "react-scripts test",
+    "lint": "eslint src --ext .js",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "yarn lint && yarn jest",
+    "eject": "react-scripts eject",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +41,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.2.0",
+    "coveralls": "^3.0.6",
     "eslint-config-mcrowder65": "^1.0.6",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-cypress": "^2.2.1",
